// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uts:stacktrace:runtime parseBaiduRuntimeStacktrace 1`] = `
"Error: click2
at Proxy.click2 (http://127.0.0.1:22515/output/pages/index/index.js:21:13)
at http://127.0.0.1:22515/output/pages/index/index.js:36:49"
`;

exports[`uts:stacktrace:runtime parseUTSJavaScriptRuntimeStacktrace 1`] = `
"error: [EXCEPTION] ReferenceError:Can't find variable: a
at pages/index/index.uvue:3:8
1  |  <script lang="uts">
2  |      setTimeout(() => {
3  |          uni.__log__('log','at pages/index/index.uvue:3',a)
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4  |      }, 1000)
5  |      export default {"
`;

exports[`uts:stacktrace:runtime parseUTSJavaScriptRuntimeStacktrace 2`] = `
"error: [EXCEPTION] at <Index __pageId=1 __pagePath="pages/index/index" __pageQuery=  ... >
Can't find variable: a
at pages/index/index.uvue:7:12
5  |      export default {
6  |          onLoad() {
7  |              uni.__log__('log','at pages/index/index.uvue:7',a)
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8  |          }
9  |      }"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 1`] = `
"error: java.lang.IndexOutOfBoundsException: Index: 1, Size: 1
at pages/index/index.uvue:13:12
11 |          onLoad() {
12 |              const arr = [1]
13 |              console.log(arr[1])
   |              ^^^^^^^^^^^^^^^^^^^
14 |          },
15 |          methods: {"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 2`] = `
"error: java.lang.IndexOutOfBoundsException: Index: 1, Size: 1
at pages/index/index.uvue:18:16
16 |              click() {
17 |                  const arr = [1]
18 |                  console.log(arr[1])
   |                  ^^^^^^^^^^^^^^^^^^^
19 |              },
20 |              click1() {"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 3`] = `
"error: java.lang.IndexOutOfBoundsException: Index: 1, Size: 1
at pages/index/test.uts:3:4
1  |  export function test() {
2  |      const arr = [1]
3  |      console.log(arr[1])
   |      ^^^^^^^^^^^^^^^^^^^
4  |  }"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 4`] = `
"​error: java.lang.IndexOutOfBoundsException: Index: 1, Size: 1​
at pages/index/test.uts:3:4
1  |  export function test() {
2  |      const arr = [1]
3  |      console.log(arr[1])
   |      ^^^^^^^^^^^^^^^^^^^
4  |  }"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 5`] = `
"‌error: java.lang.IndexOutOfBoundsException: Index: 1, Size: 1‌
at pages/index/test.uts:3:4
1  |  export function test() {
2  |      const arr = [1]
3  |      console.log(arr[1])
   |      ^^^^^^^^^^^^^^^^^^^
4  |  }"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 6`] = `
"‌error: java.lang.ClassCastException: java.lang.String cannot be cast to java.lang.Boolean‌
at components/test-boolean/test-boolean.vue:19:12
17 |          },
18 |          created(){
19 |              console.log(this.disabled1)
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |          }
21 |      }"
`;

exports[`uts:stacktrace:runtime parseWeixinRuntimeStacktrace 1`] = `
"Error: click2
at Proxy.click2 (http://127.0.0.1:22515/appservice/pages/index/index.js:23:13)
at http://127.0.0.1:22515/appservice/pages/index/index.js:36:49
at callWithErrorHandling (http://127.0.0.1:22515/appservice/common/vendor.js:2135:22)
at callWithAsyncErrorHandling (http://127.0.0.1:22515/appservice/common/vendor.js:2142:15)
at Function.invoke (http://127.0.0.1:22515/appservice/common/vendor.js:5498:14)
at f (http://127.0.0.1:22515/appservice/__dev__/WASubContext.js?t=wechat&s=1732624710099&v=3.6.6:1:147076)
at http://127.0.0.1:22515/appservice/__dev__/WASubContext.js?t=wechat&s=1732624710099&v=3.6.6:1:147519"
`;

exports[`uts:stacktrace:runtime parseWeixinRuntimeStacktrace 2`] = `
"MiniProgramError
bbbbbbbbbbb12
Error: bbbbbbbbbbb12
at http://127.0.0.1:37922/appservice/pages/index/index.js:23:13
at http://127.0.0.1:37922/appservice/__dev__/WASubContext.js?t=wechat&s=1732621970683&v=3.6.1:1:512000
at p.runWith (http://127.0.0.1:37922/appservice/__dev__/WASubContext.js?t=wechat&s=1732621970683&v=3.6.1:1:501622)
at q (http://127.0.0.1:37922/appservice/__dev__/WASubContext.js?t=wechat&s=1732621970683&v=3.6.1:1:511978)
at ide:///package/__APP__/appservice.js:1111:7
at t.doWhenAllScriptLoaded (ide:///getmainpackage.js:1174:21)"
`;
